fixed body overflow v2

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,7 +4,7 @@ body {
   font-size: 24px;
   line-height: 1.458;
   color: #fff;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 body {
